@@ -7,6 +7,7 @@ exportPattern("gamma")
 exportPattern("Lambda")
 exportPattern("mom")
 export(plotShapeTriangle)
+export(incompleteBesselK)
 S3method(print,hyperbFit)
 S3method(print,nigFit)
 S3method(plot,hyperbFit)
